# rust-cli-template

./: LICENSE  README.md  template.toml
{{project_name}}/: .vimspector.json  Cargo.toml  README.md
{{project_name}}/{%- if bin_name %}{{ bin_name }}{% else %}{{ project_name }}{% endif -%}/: .gitignore  Cargo.toml  build.rs
{{project_name}}/{%- if bin_name %}{{ bin_name }}{% else %}{{ project_name }}{% endif -%}/src/: cli.rs  logging.rs  main.rs
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/: .gitignore  Cargo.toml  rust-toolchain.toml
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/benches/: find-primes-1-thread.rs  find-primes-100-thread.rs  find-primes-2-thread.rs  find-primes-3-thread.rs  find-primes-4-thread.rs  find-primes-one-thread-per-cpu.rs  find-primes-two-threads-per-cpu.rs  rabin-miller-1-iteration.rs
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/benches/common/: mod.rs
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/src/: lib.rs
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/tests/: find-primes.rs  rabin-miller.rs
{{project_name}}/{%- if lib_name %}{{ lib_name }}{% else %}{{ project_name }}_lib{% endif -%}/tests/common/: mod.rs
{{project_name}}/{{project_name}}/: Cargo.toml  build.rs
{{project_name}}/{{project_name}}-lib/: Cargo.toml
{{project_name}}/{{project_name}}-lib/src/: lib.rs
{{project_name}}/{{project_name}}/src/: cli.rs  logging.rs  main.rs
