[package]
{% if bin_name -%}
name = "{{ bin_name }}"
{%- else -%}
name = "{{ project_name }}"
{%- endif %}
version = "0.1.0"
edition = "2021"
license = "{{license}}"
description = """{{description}}"""
readme = "README.md"
authors =["{{author}} <{{email}}>"]
categories = ["command-line-utilities"]

[features]
default = ["completion"]
completion = ["dep:clap_complete"]

[dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_complete = { version = "3.2.3", optional = true }
clap-verbosity-flag = "1.0.1"
config = "0.13.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_derive = "1.0.142"
shadow-rs = "0.16.1"
tracing = { version = "0.1.36", features = ["release_max_level_info"] }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"
{% if lib_name -%}
{{ lib_name }}= {path = "../{{ lib_name }}"}
{%- else -%}
{{ project_name }}_lib = {path = "../{{ project_name }}_lib"}
{%- endif %}
once_cell = "1.13.0"

[build-dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_mangen = "0.1.10"
clap_complete = "3.2.3"
shadow-rs = "0.16.1"
clap-verbosity-flag = "1.0.1"
tracing-log = "0.1.3"
