[package]
{% if lib_name -%}
name = "{{ lib_name }}"
{%- else -%}
name = "{{ project_name }}_lib"
{%- endif %}
version = "0.1.0"
edition = "2021"
license = "{{license}}"
readme = "README.md"
authors =["{{author}} <{{email}}>"]

[dependencies]
num_cpus = "1.13.1"
once_cell = "1.13.0"
rand = "0.8.5"
tracing = "0.1.36"

[dev-dependencies]
table-test = "0.2.1"
test-log = { version = "0.2.11", features = ["trace"], default-features = false }
tracing = "0.1.36"  
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"] }
