[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
license = "{{license}}"
description = """{{description}}"""
readme = "README.md"
authors =["{{author}} <{{email}}>"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap-verbosity-flag = "1.0.1"
clap_complete = "3.2.3"
config = "0.13.2"
serde = { version = "1.0.142", features = ["derive"] }
serde_derive = "1.0.142"
shadow-rs = "0.16.1"
tracing = { version = "0.1.36", features = ["release_max_level_info"] }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"

[build-dependencies]
clap = { version = "3.2.15", features = ["cargo", "derive"] }
clap_mangen = "0.1.10"
clap_complete = "3.2.3"
shadow-rs = "0.16.1"
clap-verbosity-flag = "1.0.1"
tracing-log = "0.1.3"
